@@ -1,6 +1,7 @@
 Revision history for Perl module WebService::DigitalOcean.
 
 {{$NEXT}}
+    - Create Keys role for SSH Keys management.
 
 0.001 2014-07-21T15:21:52Z
     - Initial release.
